More PMD code cleanup (mostly Integer.valueOf)
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/cdk/trunk@12073 eb4e18e3-b210-0410-a6ab-dec725e4b171