@@ -144,10 +144,10 @@ public class CNNRegressionModel extends RModel {
         this.params.put("skip", new Boolean(false));
         this.params.put("rang", new Double(0.7));
         this.params.put("decay", new Double(0.0));
-        this.params.put("maxit", new Integer(100));
+        this.params.put("maxit", Integer.valueOf(100));
         this.params.put("Hess", new Boolean(false));
         this.params.put("trace", new Boolean(false)); // no need to see output
-        this.params.put("MaxNWts", new Integer(1000));
+        this.params.put("MaxNWts", Integer.valueOf(1000));
         this.params.put("abstol", new Double(1.0e-4));
         this.params.put("reltol", new Double(1.0e-8));
     }        
@@ -223,7 +223,7 @@ public class CNNRegressionModel extends RModel {
         }
         this.params.put("x", xx);
         this.params.put("y", yy);
-        this.params.put("size", new Integer(size));
+        this.params.put("size", Integer.valueOf(size));
         this.setDefaults();
     }
     
@@ -279,7 +279,7 @@ public class CNNRegressionModel extends RModel {
         }
         this.params.put("x", xx);
         this.params.put("y", yy);
-        this.params.put("size", new Integer(size));
+        this.params.put("size", Integer.valueOf(size));
         this.setDefaults();
     }
 
